apps/upload/upload-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: upload
spec:
  type: ClusterIP
  selector:
    app: upload
  ports:
    - name: upload
      port: 8080
      targetPort: 8080
