apps/upload/upload-ext-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: upload-ext
  labels:
    type: external
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  tls:
    - hosts:
        - upload.former-hostname.com
      secretName: upload.former-hostname.com
  rules:
    - host: upload.former-hostname.com
      http:
        paths:
          - backend:
              service:
                name: upload
                port:
                  number: 8080
            path: /
            pathType: Prefix
