apps/upload/upload-local-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: upload-local
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  labels:
    type: local
spec:
  rules:
    - host: upload.local
      http:
        paths:
          - backend:
              serviceName: upload
              servicePort: 8080
            path: /
